# joebiden

./: .gitignore  docker-compose.yml
.github/workflows/: main.yml
src/: Dockerfile  docker-compose.yml  main.py  pyproject.toml  router.py  utils.py
src/arts/: soyjack.txt  wojak.txt
src/commands/: __init__.py  abc.py  add_soyjack.py  meme.py  pedo.py  ping.py  soyjack_list.py  whois.py
src/models/: member.py
src/services/: redis.py
